[gd_scene load_steps=4 format=3 uid="uid://yk3102jxt6mv"]

[ext_resource type="Script" path="res://Control.gd" id="1_55gce"]
[ext_resource type="Texture2D" uid="uid://di4okmy4rn2dn" path="res://Visuals/Placeholder Graphics/Brood_Feud-removebg-preview.png" id="2_es7fj"]
[ext_resource type="Texture2D" uid="uid://dkg6y7njbjle4" path="res://Visuals/Placeholder Graphics/title-removebg-preview.png" id="2_tvltg"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_55gce")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 59.0
offset_right = 921.0
offset_bottom = 469.0
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_tvltg")

[node name="MenuOptions" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="startButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions"]
layout_mode = 2
text = "Play"

[node name="creditsButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions"]
layout_mode = 2
text = "Credits
"

[node name="quitButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions"]
layout_mode = 2
text = "Quit"

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/CenterContainer"]
layout_mode = 2
texture = ExtResource("2_es7fj")

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/startButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/creditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/quitButton" to="." method="_on_quit_button_pressed"]
